--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -1419,11 +1419,10 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-d-i"><code>&lt;fn&gt;
-      d i</code></a>:</td>
+      "emacspeak.html#index-_003cfn_003e-d-i"><code>&lt;fn&gt; d
+      i</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -4970,11 +4969,10 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-d-i-1"><code>C-e d
+      "emacspeak.html#index-C_002de-d-i-1"><code>C-e d
       i</code></a>:</td>
       <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      <td valign="top"><a href="emacspeak.html">emacspeak</a></td>
     </tr>
     <tr>
       <td></td>
