--- a/manual/Speech-Output-Control.html
+++ b/manual/Speech-Output-Control.html
@@ -160,20 +160,7 @@
       <p><code>emacspeak-toggle-audio-indentation</code></p>
       <p>Toggle state of Emacspeak audio indentation. Interactive
       PREFIX arg means toggle the global default value, and then
-      set the current local value to the result. Specifying the
-      method of indentation as ‘tones’ results in the speech-server
-      producing a tone whose length is a function of the line’s
-      indentation. Specifying ‘speak’ results in the number of
-      initial spaces being spoken.</p><span id=
-      "index-emacspeak_002daudio_002dindentation_002dmethod"></span>
-      <p>Indentation feedback style is set by option
-      <code>emacspeak-audio-indentation-method</code></p>
-      <p>The default value is <code>"speak"</code></p><span id=
-      "index-emacspeak_002daudio_002dindentation_002dmethods"></span>
-      <p>See variable
-      <code>emacspeak-audio-indentation-methods</code> for possible
-      values. Automatically becomes local in any buffer where it is
-      set.</p>
+      set the current local value to the result.</p>
     </dd>
   </dl>
   <hr />
