--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -1032,10 +1032,10 @@ any other key to speak entire help.
         "format">Speaks current line.  With prefix ARG, speaks the rest of the line
 from point.  Negative prefix optional arg speaks from start of line to
 point.  Voicifies if option ‘voice-lock-mode’ is on.  Indicates
-indentation with a tone or a spoken message if audio indentation is in
-use see ‘emacspeak-toggle-audio-indentation’ bound to
+indentation with a   spoken message if audio indentation is on
+ see ‘emacspeak-toggle-audio-indentation’ bound to
 C-e d i.  Indicates position of point
-with an aural highlight if option ‘emacspeak-show-point’ is turned on
+with an aural highlight if option ‘emacspeak-show-point’ is  on
 –see command ‘emacspeak-toggle-show-point’ bound to
 C-e C-d.  Lines that start hidden blocks of text,
 e.g.  outline header lines, or header lines of blocks created by
@@ -1962,27 +1962,9 @@ any other key to speak entire sexp.
 </pre>
       </div>
     </dd>
-  </dl><span id="emacspeak_002dspeak_002dtext_002drange"></span>
-  <h4 class="subsubsection">12.172.1.87
-  emacspeak-speak-text-range</h4>
-  <dl>
-    <dt id="index-emacspeak_002dspeak_002dtext_002drange">Command:
-    <strong>emacspeak-speak-text-range</strong>
-    <em>(property)</em></dt>
-    <dd>
-      <span id=
-      "index-emacspeak_002dspeak_002dtext_002drange-1"></span>
-      <div class="format">
-        <pre class=
-        "format">Speak text range identified by this PROPERTY.
-
-(fn PROPERTY)
-</pre>
-      </div>
-    </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dthis_002dface_002dchunk"></span>
-  <h4 class="subsubsection">12.172.1.88
+  <h4 class="subsubsection">12.172.1.87
   emacspeak-speak-this-face-chunk</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dthis_002dface_002dchunk">
@@ -1998,7 +1980,7 @@ any other key to speak entire sexp.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dthis_002dpersonality_002dchunk"></span>
-  <h4 class="subsubsection">12.172.1.89
+  <h4 class="subsubsection">12.172.1.88
   emacspeak-speak-this-personality-chunk</h4>
   <dl>
     <dt id=
@@ -2017,7 +1999,7 @@ personality.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dtime"></span>
-  <h4 class="subsubsection">12.172.1.90 emacspeak-speak-time</h4>
+  <h4 class="subsubsection">12.172.1.89 emacspeak-speak-time</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dtime-1">Command:
     <strong>emacspeak-speak-time</strong> <em>(&amp;optional
@@ -2042,7 +2024,7 @@ Second interactive prefix sets clock to new timezone.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dversion"></span>
-  <h4 class="subsubsection">12.172.1.91
+  <h4 class="subsubsection">12.172.1.90
   emacspeak-speak-version</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dversion-1">Command:
@@ -2066,7 +2048,7 @@ Optional interactive prefix arg ‘speak-rev’ speaks only the Git revision num
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dvisual_002dline"></span>
-  <h4 class="subsubsection">12.172.1.92
+  <h4 class="subsubsection">12.172.1.91
   emacspeak-speak-visual-line</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dvisual_002dline">Command:
@@ -2082,7 +2064,7 @@ Cues the start of a physical line with auditory icon ‘left’.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dvoice_002dannotate_002dparagraphs"></span>
-  <h4 class="subsubsection">12.172.1.93
+  <h4 class="subsubsection">12.172.1.92
   emacspeak-speak-voice-annotate-paragraphs</h4>
   <dl>
     <dt id=
@@ -2103,7 +2085,7 @@ Useful to do this before you listen to an entire buffer.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dwhich_002dfunction"></span>
-  <h4 class="subsubsection">12.172.1.94
+  <h4 class="subsubsection">12.172.1.93
   emacspeak-speak-which-function</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dwhich_002dfunction">
@@ -2126,7 +2108,7 @@ semantic to do the work.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dwindow_002dinformation"></span>
-  <h4 class="subsubsection">12.172.1.95
+  <h4 class="subsubsection">12.172.1.94
   emacspeak-speak-window-information</h4>
   <dl>
     <dt id=
@@ -2148,7 +2130,7 @@ semantic to do the work.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dword"></span>
-  <h4 class="subsubsection">12.172.1.96 emacspeak-speak-word</h4>
+  <h4 class="subsubsection">12.172.1.95 emacspeak-speak-word</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dword-1">Command:
     <strong>emacspeak-speak-word</strong> <em>(&amp;optional
@@ -2173,7 +2155,7 @@ spelled out  instead of being spoken.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dword_002dinteractively"></span>
-  <h4 class="subsubsection">12.172.1.97
+  <h4 class="subsubsection">12.172.1.96
   emacspeak-speak-word-interactively</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dword_002dinteractively">
@@ -2192,7 +2174,7 @@ any other key to speak entire word.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dworld_002dclock"></span>
-  <h4 class="subsubsection">12.172.1.98
+  <h4 class="subsubsection">12.172.1.97
   emacspeak-speak-world-clock</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dworld_002dclock">Command:
@@ -2212,7 +2194,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
     </dd>
   </dl><span id=
   "emacspeak_002dswitch_002dto_002dreference_002dbuffer"></span>
-  <h4 class="subsubsection">12.172.1.99
+  <h4 class="subsubsection">12.172.1.98
   emacspeak-switch-to-reference-buffer</h4>
   <dl>
     <dt id=
@@ -2230,7 +2212,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002daction_002dmode"></span>
-  <h4 class="subsubsection">12.172.1.100
+  <h4 class="subsubsection">12.172.1.99
   emacspeak-toggle-action-mode</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002daction_002dmode">
@@ -2248,37 +2230,8 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dtoggle_002daudio_002dindentation"></span>
-  <h4 class="subsubsection">12.172.1.101
-  emacspeak-toggle-audio-indentation</h4>
-  <dl>
-    <dt id=
-    "index-emacspeak_002dtoggle_002daudio_002dindentation-1">
-    Command: <strong>emacspeak-toggle-audio-indentation</strong>
-    <em>(&amp;optional prefix)</em></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e d i</kbd></dt>
-        <dd><span id="index-C_002de-d-i-1"></span></dd>
-        <dt><kbd>&lt;fn&gt; d i</kbd></dt>
-        <dd><span id="index-_003cfn_003e-d-i"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dtoggle_002daudio_002dindentation-2"></span>
-      <div class="format">
-        <pre class=
-        "format">Toggle state of  Emacspeak  audio indentation.
-Interactive PREFIX arg means toggle  the global default value, and then set the
-current local  value to the result.
-Specifying the method of indentation as ‘tones’
-results in the Dectalk producing a tone whose length is a function of the
-line’s indentation.  Specifying ‘speak’
-results in the number of initial spaces being spoken.
-</pre>
-      </div>
-    </dd>
-  </dl><span id=
   "emacspeak_002dtoggle_002dcharacter_002decho"></span>
-  <h4 class="subsubsection">12.172.1.102
+  <h4 class="subsubsection">12.172.1.100
   emacspeak-toggle-character-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dcharacter_002decho-1">
@@ -2301,7 +2254,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dheader_002dline"></span>
-  <h4 class="subsubsection">12.172.1.103
+  <h4 class="subsubsection">12.172.1.101
   emacspeak-toggle-header-line</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dheader_002dline">
@@ -2315,7 +2268,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dline_002decho"></span>
-  <h4 class="subsubsection">12.172.1.104
+  <h4 class="subsubsection">12.172.1.102
   emacspeak-toggle-line-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dline_002decho-1">
@@ -2337,7 +2290,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dmail_002dalert"></span>
-  <h4 class="subsubsection">12.172.1.105
+  <h4 class="subsubsection">12.172.1.103
   emacspeak-toggle-mail-alert</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dmail_002dalert">Command:
@@ -2361,7 +2314,7 @@ indicating the arrival  of new mail when displaying the mode line.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dshow_002dpoint"></span>
-  <h4 class="subsubsection">12.172.1.106
+  <h4 class="subsubsection">12.172.1.104
   emacspeak-toggle-show-point</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dshow_002dpoint">Command:
@@ -2384,7 +2337,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter"></span>
-  <h4 class="subsubsection">12.172.1.107
+  <h4 class="subsubsection">12.172.1.105
   emacspeak-toggle-speak-line-invert-filter</h4>
   <dl>
     <dt id=
@@ -2410,7 +2363,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dmessages"></span>
-  <h4 class="subsubsection">12.172.1.108
+  <h4 class="subsubsection">12.172.1.106
   emacspeak-toggle-speak-messages</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dspeak_002dmessages">
@@ -2431,7 +2384,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dword_002decho"></span>
-  <h4 class="subsubsection">12.172.1.109
+  <h4 class="subsubsection">12.172.1.107
   emacspeak-toggle-word-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dword_002decho-1">
@@ -2453,7 +2406,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dview_002dnotifications"></span>
-  <h4 class="subsubsection">12.172.1.110
+  <h4 class="subsubsection">12.172.1.108
   emacspeak-view-notifications</h4>
   <dl>
     <dt id="index-emacspeak_002dview_002dnotifications">Command:
@@ -2474,7 +2427,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvoiceify_002drectangle"></span>
-  <h4 class="subsubsection">12.172.1.111
+  <h4 class="subsubsection">12.172.1.109
   emacspeak-voiceify-rectangle</h4>
   <dl>
     <dt id="index-emacspeak_002dvoiceify_002drectangle">Command:
@@ -2494,7 +2447,7 @@ Prompts for PERSONALITY  with completion when called interactively.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvoiceify_002dregion"></span>
-  <h4 class="subsubsection">12.172.1.112
+  <h4 class="subsubsection">12.172.1.110
   emacspeak-voiceify-region</h4>
   <dl>
     <dt id="index-emacspeak_002dvoiceify_002dregion">Command:
@@ -2513,7 +2466,7 @@ Prompts for PERSONALITY  with completion when called interactively.
       </div>
     </dd>
   </dl><span id="emacspeak_002dzap_002dtts"></span>
-  <h4 class="subsubsection">12.172.1.113 emacspeak-zap-tts</h4>
+  <h4 class="subsubsection">12.172.1.111 emacspeak-zap-tts</h4>
   <dl>
     <dt id="index-emacspeak_002dzap_002dtts">Command:
     <strong>emacspeak-zap-tts</strong></dt>
@@ -2535,25 +2488,13 @@ Prompts for PERSONALITY  with completion when called interactively.
     <dt id="index-User-Option-728">Variable: <strong>User
     Option</strong> <em>emacspeak-audio-indentation</em></dt>
     <dd>
-      <p>Option indicating if line indentation is cued. If non-nil
-      , then speaking a line indicates its indentation. You can use
+      <p>Option indicating if line indentation is cued. You can use
       command ‘emacspeak-toggle-audio-indentation’ bound to C-e d i
-      to toggle this setting..</p>
+      to toggle this setting.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-729">Variable: <strong>User
-    Option</strong>
-    <em>emacspeak-audio-indentation-method</em></dt>
-    <dd>
-      <p>Current technique used to cue indentation. Default is
-      ‘speak’. You can specify ‘tone’ for producing a beep
-      indicating the indentation. Automatically becomes local in
-      any buffer where it is set.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-730">Variable: <strong>User
     Option</strong> <em>emacspeak-character-echo</em></dt>
     <dd>
       <p>If t, then emacspeak echoes characters as you type. You
@@ -2561,7 +2502,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-731">Variable: <strong>User
+    <dt id="index-User-Option-730">Variable: <strong>User
     Option</strong> <em>emacspeak-line-echo</em></dt>
     <dd>
       <p>If t, then emacspeak echoes lines as you type. You can use
@@ -2569,7 +2510,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-732">Variable: <strong>User
+    <dt id="index-User-Option-731">Variable: <strong>User
     Option</strong> <em>emacspeak-mail-alert</em></dt>
     <dd>
       <p>Option to indicate cueing of new mail. If t, emacspeak
@@ -2583,7 +2524,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-733">Variable: <strong>User
+    <dt id="index-User-Option-732">Variable: <strong>User
     Option</strong> <em>emacspeak-mail-alert-interval</em></dt>
     <dd>
       <p>Interval in seconds between mail alerts for the same
@@ -2591,7 +2532,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-734">Variable: <strong>User
+    <dt id="index-User-Option-733">Variable: <strong>User
     Option</strong> <em>emacspeak-mail-spool-file</em></dt>
     <dd>
       <p>Mail spool file examined to alert you about newly arrived
@@ -2599,14 +2540,14 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-735">Variable: <strong>User
+    <dt id="index-User-Option-734">Variable: <strong>User
     Option</strong> <em>emacspeak-silence-hook</em></dt>
     <dd>
       <p>Functions run after emacspeak-silence is called.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-736">Variable: <strong>User
+    <dt id="index-User-Option-735">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-filter-persistent-store</em></dt>
     <dd>
@@ -2614,7 +2555,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-737">Variable: <strong>User
+    <dt id="index-User-Option-736">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-line-column-filter</em></dt>
     <dd>
@@ -2625,7 +2566,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-738">Variable: <strong>User
+    <dt id="index-User-Option-737">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-maximum-line-length</em></dt>
     <dd>
@@ -2637,7 +2578,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-739">Variable: <strong>User
+    <dt id="index-User-Option-738">Variable: <strong>User
     Option</strong> <em>emacspeak-speak-messages</em></dt>
     <dd>
       <p>Option indicating if messages are spoken. If nil,
@@ -2647,7 +2588,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-740">Variable: <strong>User
+    <dt id="index-User-Option-739">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-time-format-string</em></dt>
     <dd>
@@ -2657,7 +2598,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-741">Variable: <strong>User
+    <dt id="index-User-Option-740">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-zoneinfo-directory</em></dt>
     <dd>
@@ -2665,15 +2606,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-742">Variable: <strong>User
-    Option</strong> <em>emacspeak-use-header-line</em></dt>
-    <dd>
-      <p>Use default header line defined by Emacspeak for buffers
-      that dont customize the header.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-743">Variable: <strong>User
+    <dt id="index-User-Option-741">Variable: <strong>User
     Option</strong> <em>emacspeak-voicemail-spool-file</em></dt>
     <dd>
       <p>Mail spool file examined to alert you about newly arrived
@@ -2681,7 +2614,7 @@ Prompts for PERSONALITY  with completion when called interactively.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-744">Variable: <strong>User
+    <dt id="index-User-Option-742">Variable: <strong>User
     Option</strong> <em>emacspeak-word-echo</em></dt>
     <dd>
       <p>If t, then emacspeak echoes words as you type. You can use
