--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -1665,8 +1665,8 @@ key             binding
   emacspeak-wizards-fix-typo</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dfix_002dtypo">Command:
-    <strong>emacspeak-wizards-fix-typo</strong> <em>(ext word
-    correction)</em></dt>
+    <strong>emacspeak-wizards-fix-typo</strong> <em>[Arg list not
+    available until function definition is loaded.]</em></dt>
     <dd>
       <span id=
       "index-emacspeak_002dwizards_002dfix_002dtypo-1"></span>
@@ -2651,28 +2651,9 @@ of the source buffer.
 </pre>
       </div>
     </dd>
-  </dl><span id="emacspeak_002dwizards_002dspot_002dwords"></span>
-  <h4 class="subsubsection">12.207.1.112
-  emacspeak-wizards-spot-words</h4>
-  <dl>
-    <dt id="index-emacspeak_002dwizards_002dspot_002dwords">
-    Command: <strong>emacspeak-wizards-spot-words</strong> <em>(ext
-    word)</em></dt>
-    <dd>
-      <span id=
-      "index-emacspeak_002dwizards_002dspot_002dwords-1"></span>
-      <div class="format">
-        <pre class=
-        "format">Searches recursively in all files with extension ‘ext’
-for ‘word’ and displays hits in a compilation buffer.
-
-(fn EXT WORD)
-</pre>
-      </div>
-    </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dsqueeze_002dblanks"></span>
-  <h4 class="subsubsection">12.207.1.113
+  <h4 class="subsubsection">12.207.1.112
   emacspeak-wizards-squeeze-blanks</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dsqueeze_002dblanks">
@@ -2696,7 +2677,7 @@ for ‘word’ and displays hits in a compilation buffer.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dswap_002dfg_002dand_002dbg"></span>
-  <h4 class="subsubsection">12.207.1.114
+  <h4 class="subsubsection">12.207.1.113
   emacspeak-wizards-swap-fg-and-bg</h4>
   <dl>
     <dt id=
@@ -2718,7 +2699,7 @@ for ‘word’ and displays hits in a compilation buffer.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dterm"></span>
-  <h4 class="subsubsection">12.207.1.115
+  <h4 class="subsubsection">12.207.1.114
   emacspeak-wizards-term</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dterm">Command:
@@ -2743,7 +2724,7 @@ term if needed.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dterminal"></span>
-  <h4 class="subsubsection">12.207.1.116
+  <h4 class="subsubsection">12.207.1.115
   emacspeak-wizards-terminal</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dterminal">Command:
@@ -2761,7 +2742,7 @@ term if needed.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtoggle_002dmm_002ddd_002dyyyy_002ddate_002dpronouncer"></span>
-  <h4 class="subsubsection">12.207.1.117
+  <h4 class="subsubsection">12.207.1.116
   emacspeak-wizards-toggle-mm-dd-yyyy-date-pronouncer</h4>
   <dl>
     <dt id=
@@ -2780,7 +2761,7 @@ term if needed.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtoggle_002dyyyymmdd_002ddate_002dpronouncer"></span>
-  <h4 class="subsubsection">12.207.1.118
+  <h4 class="subsubsection">12.207.1.117
   emacspeak-wizards-toggle-yyyymmdd-date-pronouncer</h4>
   <dl>
     <dt id=
@@ -2799,7 +2780,7 @@ term if needed.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtramp_002dopen_002dlocation"></span>
-  <h4 class="subsubsection">12.207.1.119
+  <h4 class="subsubsection">12.207.1.118
   emacspeak-wizards-tramp-open-location</h4>
   <dl>
     <dt id=
@@ -2820,7 +2801,7 @@ Location is specified by name.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtune_002din_002dradio_002dbrowse"></span>
-  <h4 class="subsubsection">12.207.1.120
+  <h4 class="subsubsection">12.207.1.119
   emacspeak-wizards-tune-in-radio-browse</h4>
   <dl>
     <dt id=
@@ -2846,7 +2827,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dtune_002din_002dradio_002dsearch"></span>
-  <h4 class="subsubsection">12.207.1.121
+  <h4 class="subsubsection">12.207.1.120
   emacspeak-wizards-tune-in-radio-search</h4>
   <dl>
     <dt id=
@@ -2867,7 +2848,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dunits"></span>
-  <h4 class="subsubsection">12.207.1.122
+  <h4 class="subsubsection">12.207.1.121
   emacspeak-wizards-units</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dunits">Command:
@@ -2886,7 +2867,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dvc_002dn"></span>
-  <h4 class="subsubsection">12.207.1.123
+  <h4 class="subsubsection">12.207.1.122
   emacspeak-wizards-vc-n</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dvc_002dn">Command:
@@ -2900,7 +2881,7 @@ Optional interactive prefix arg ‘category’ prompts for a category.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dvc_002dview_002dmode"></span>
-  <h4 class="subsubsection">12.207.1.124
+  <h4 class="subsubsection">12.207.1.123
   emacspeak-wizards-vc-view-mode</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dvc_002dview_002dmode">
@@ -2924,7 +2905,7 @@ during initialization.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwizards_002dvc_002dviewer"></span>
-  <h4 class="subsubsection">12.207.1.125
+  <h4 class="subsubsection">12.207.1.124
   emacspeak-wizards-vc-viewer</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dvc_002dviewer">Command:
@@ -2948,7 +2929,7 @@ during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dvc_002dviewer_002drefresh"></span>
-  <h4 class="subsubsection">12.207.1.126
+  <h4 class="subsubsection">12.207.1.125
   emacspeak-wizards-vc-viewer-refresh</h4>
   <dl>
     <dt id=
@@ -2966,7 +2947,7 @@ during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dm_002dplayer_002dmode"></span>
-  <h4 class="subsubsection">12.207.1.127
+  <h4 class="subsubsection">12.207.1.126
   emacspeak-wizards-view-buffers-filtered-by-m-player-mode</h4>
   <dl>
     <dt id=
@@ -2988,7 +2969,7 @@ during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dview_002dbuffers_002dfiltered_002dby_002dthis_002dmode"></span>
-  <h4 class="subsubsection">12.207.1.128
+  <h4 class="subsubsection">12.207.1.127
   emacspeak-wizards-view-buffers-filtered-by-this-mode</h4>
   <dl>
     <dt id=
@@ -3019,7 +3000,7 @@ during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dvoice_002dsampler"></span>
-  <h4 class="subsubsection">12.207.1.129
+  <h4 class="subsubsection">12.207.1.128
   emacspeak-wizards-voice-sampler</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dvoice_002dsampler">
@@ -3038,7 +3019,7 @@ during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dytel_002ddownload"></span>
-  <h4 class="subsubsection">12.207.1.130
+  <h4 class="subsubsection">12.207.1.129
   emacspeak-wizards-ytel-download</h4>
   <dl>
     <dt id="index-emacspeak_002dwizards_002dytel_002ddownload">
@@ -3056,7 +3037,7 @@ during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dwizards_002dytel_002dplay_002dat_002dpoint"></span>
-  <h4 class="subsubsection">12.207.1.131
+  <h4 class="subsubsection">12.207.1.130
   emacspeak-wizards-ytel-play-at-point</h4>
   <dl>
     <dt id=
@@ -3080,7 +3061,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
   </dl><span id="emacspeak_002dwizards-Options"></span>
   <h4 class="subsection">12.207.2 emacspeak-wizards Options</h4>
   <dl>
-    <dt id="index-User-Option-800">Variable: <strong>User
+    <dt id="index-User-Option-798">Variable: <strong>User
     Option</strong> <em>emacspeak-clipboard-file</em></dt>
     <dd>
       <p>File used to save Emacspeak clipboard. The emacspeak
@@ -3089,14 +3070,14 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-801">Variable: <strong>User
+    <dt id="index-User-Option-799">Variable: <strong>User
     Option</strong> <em>emacspeak-curl-cookie-store</em></dt>
     <dd>
       <p>Cookie store used by Curl.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-802">Variable: <strong>User
+    <dt id="index-User-Option-800">Variable: <strong>User
     Option</strong> <em>emacspeak-emergency-tts-server</em></dt>
     <dd>
       <p>TTS server to use in an emergency. Set this to a TTS
@@ -3109,7 +3090,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-803">Variable: <strong>User
+    <dt id="index-User-Option-801">Variable: <strong>User
     Option</strong> <em>emacspeak-iex-api-key</em></dt>
     <dd>
       <p>Web API key for IEX Finance access. See IEX Login Console
@@ -3118,7 +3099,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-804">Variable: <strong>User
+    <dt id="index-User-Option-802">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-telephone-directory</em></dt>
     <dd>
@@ -3127,14 +3108,14 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-805">Variable: <strong>User
+    <dt id="index-User-Option-803">Variable: <strong>User
     Option</strong> <em>emacspeak-ssh-tts-server</em></dt>
     <dd>
       <p>SSH TTS server to use by default.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-806">Variable: <strong>User
+    <dt id="index-User-Option-804">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-alpha-vantage-api-key</em></dt>
     <dd>
@@ -3144,7 +3125,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-807">Variable: <strong>User
+    <dt id="index-User-Option-805">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-find-switches-widget</em></dt>
     <dd>
@@ -3152,7 +3133,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-808">Variable: <strong>User
+    <dt id="index-User-Option-806">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-pdf-to-text-options</em></dt>
     <dd>
@@ -3160,7 +3141,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-809">Variable: <strong>User
+    <dt id="index-User-Option-807">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-personal-portfolio</em></dt>
     <dd>
@@ -3171,22 +3152,14 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-810">Variable: <strong>User
+    <dt id="index-User-Option-808">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-project-shells</em></dt>
     <dd>
       <p>List of shell-name/initial-directory pairs.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-811">Variable: <strong>User
-    Option</strong>
-    <em>emacspeak-wizards-spot-words-extension</em></dt>
-    <dd>
-      <p>Default file extension used when spotting words.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-812">Variable: <strong>User
+    <dt id="index-User-Option-809">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-tramp-locations</em></dt>
     <dd>
       <p>Tramp locations used by Emacspeak tramp wizard. Locations
