--- a/manual/emacspeak.html
+++ b/manual/emacspeak.html
@@ -70,38 +70,8 @@
   little: It sets up Emacs to load package-specific Emacspeak
   modules as each package is loaded. It implements function
   emacspeak which loads the rest of the system.</p><span id=
-  "Emacspeak-Commands"></span>
-  <h4 class="subsection">12.9.1 Emacspeak Commands</h4><span id=
-  "emacspeak_002dtoggle_002daudio_002dindentation"></span>
-  <h4 class="subsubsection">12.9.1.1
-  emacspeak-toggle-audio-indentation</h4>
-  <dl>
-    <dt id=
-    "index-emacspeak_002dtoggle_002daudio_002dindentation-1">
-    Command: <strong>emacspeak-toggle-audio-indentation</strong>
-    <em>(&amp;optional prefix)</em></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e d i</kbd></dt>
-        <dd><span id="index-C_002de-d-i-1"></span></dd>
-        <dt><kbd>&lt;fn&gt; d i</kbd></dt>
-        <dd><span id="index-_003cfn_003e-d-i"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dtoggle_002daudio_002dindentation-2"></span>
-      <div class="format">
-        <pre class=
-        "format">Toggle state of  Emacspeak  audio indentation.
-Interactive PREFIX arg means toggle  the global default value, and then set the
-current local  value to the result.
-Specifying the method of indentation as ‘tones’
-results in the Dectalk producing a tone whose length is a function of the
-line’s indentation.  Specifying ‘speak’
-results in the number of initial spaces being spoken.
-</pre>
-      </div>
-    </dd>
-  </dl><span id="emacspeak-Options"></span>
-  <h4 class="subsection">12.9.2 emacspeak Options</h4>
+  "emacspeak-Options"></span>
+  <h4 class="subsection">12.9.1 emacspeak Options</h4>
   <dl>
     <dt id="index-User-Option-17">Variable: <strong>User
     Option</strong>
