--- a/manual/emacspeak_002dyasnippet.html
+++ b/manual/emacspeak_002dyasnippet.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dytel.html" rel="next" title=
-  "emacspeak-ytel" />
+  <link href="espeak_002dvoices.html" rel="next" title=
+  "espeak-voices" />
   <link href="emacspeak_002dyaml.html" rel="prev" title=
   "emacspeak-yaml" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dyasnippet"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dytel.html" accesskey="n" rel=
-    "next">emacspeak-ytel</a>, Previous: <a href=
+    <p>Next: <a href="espeak_002dvoices.html" accesskey="n" rel=
+    "next">espeak-voices</a>, Previous: <a href=
     "emacspeak_002dyaml.html" accesskey="p" rel=
     "prev">emacspeak-yaml</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
