--- a/manual/espeak_002dvoices.html
+++ b/manual/espeak_002dvoices.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="extra_002dmuggles.html" rel="next" title=
   "extra-muggles" />
-  <link href="emacspeak_002dytel.html" rel="prev" title=
-  "emacspeak-ytel" />
+  <link href="emacspeak_002dyasnippet.html" rel="prev" title=
+  "emacspeak-yasnippet" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="extra_002dmuggles.html" accesskey="n" rel=
     "next">extra-muggles</a>, Previous: <a href=
-    "emacspeak_002dytel.html" accesskey="p" rel=
-    "prev">emacspeak-ytel</a>, Up: <a href=
+    "emacspeak_002dyasnippet.html" accesskey="p" rel=
+    "prev">emacspeak-yasnippet</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,13 +65,13 @@
   </div>
   <hr />
   <span id="espeak_002dvoices-1"></span>
-  <h3 class="section">12.215 espeak-voices</h3>
+  <h3 class="section">12.214 espeak-voices</h3>
   <p>This module defines the various voices used in voice-lock mode
   by the ESpeak TTS engine.</p><span id=
   "Espeak_002dVoices-Commands"></span>
-  <h4 class="subsection">12.215.1 Espeak-Voices
+  <h4 class="subsection">12.214.1 Espeak-Voices
   Commands</h4><span id="espeak"></span>
-  <h4 class="subsubsection">12.215.1.1 espeak</h4>
+  <h4 class="subsubsection">12.214.1.1 espeak</h4>
   <dl>
     <dt id="index-espeak">Command: <strong>espeak</strong></dt>
     <dd>
@@ -87,9 +87,9 @@
       </div>
     </dd>
   </dl><span id="espeak_002dvoices-Options"></span>
-  <h4 class="subsection">12.215.2 espeak-voices Options</h4>
+  <h4 class="subsection">12.214.2 espeak-voices Options</h4>
   <dl>
-    <dt id="index-User-Option-814">Variable: <strong>User
+    <dt id="index-User-Option-812">Variable: <strong>User
     Option</strong> <em>espeak-default-speech-rate</em></dt>
     <dd>
       <p>Default speech rate for eSpeak.</p>
