--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -94,7 +94,7 @@
   the <acronym title="Emacs Web Wowser">EWW</acronym>
   documentation, then read See <a href=
   "emacspeak_002deww.html">emacspeak-eww</a>.</p>
-  <p>This chapter documents a total of 1159 commands and 859
+  <p>This chapter documents a total of 1152 commands and 863
   options.</p>
   <table class="menu" border="0" cellspacing="0">
     <tr>
@@ -1149,6 +1149,12 @@
       "emacspeak_002dsdcv.html">emacspeak-sdcv</a></td>
       <td>&nbsp;&nbsp;</td>
       <td align="left" valign="top">Speech-enable SDCV.</td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">• <a href=
+      "emacspeak_002dselectrum.html">emacspeak-selectrum</a></td>
+      <td>&nbsp;&nbsp;</td>
+      <td align="left" valign="top">Speech-enable SELECTRUM.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
