--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -654,6 +654,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-_003cfn_003e-C_002d_002e"><code>
+      &lt;fn&gt; C-.</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dspeak.html#index-_003cfn_003e-C_002d_0040"><code>
       &lt;fn&gt; C-@</code></a>:</td>
       <td>&nbsp;</td>
@@ -4077,6 +4086,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-C_002de-C_002d_002e"><code>C-e
+      C-.</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
