--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -62,8 +62,8 @@
   </div>
   <hr />
   <span id="URL-Templates-1"></span>
-  <h3 class="section">12.230 URL Templates</h3>
-  <p>This section documents a total of 76 URL Templates.</p>
+  <h3 class="section">12.231 URL Templates</h3>
+  <p>This section documents a total of 77 URL Templates.</p>
   <p>All of these URL templates can be invoked via command <kbd>M-x
   emacspeak-url-template-fetch</kbd> normally bound to <kbd>C-e u
   &lt;fn&gt; u</kbd>. This command prompts for the name of the
@@ -175,6 +175,10 @@
     <li>
       <b>Dictionary Lookup</b>
       <p>Dictionary Lookup</p>
+    </li>
+    <li>
+      <b>Finance Google</b>
+      <p>Lookup ticker on Google Finance.</p>
     </li>
     <li>
       <b>Finance Summary From Google</b>
