--- a/manual/emacspeak_002dsdcv.html
+++ b/manual/emacspeak_002dsdcv.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dses.html" rel="next" title=
-  "emacspeak-ses" />
+  <link href="emacspeak_002dselectrum.html" rel="next" title=
+  "emacspeak-selectrum" />
   <link href="emacspeak_002dsage.html" rel="prev" title=
   "emacspeak-sage" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dsdcv"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dses.html" accesskey="n" rel=
-    "next">emacspeak-ses</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dselectrum.html" accesskey="n"
+    rel="next">emacspeak-selectrum</a>, Previous: <a href=
     "emacspeak_002dsage.html" accesskey="p" rel=
     "prev">emacspeak-sage</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
