--- a/manual/emacspeak_002dses.html
+++ b/manual/emacspeak_002dses.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dsetup.html" rel="next" title=
   "emacspeak-setup" />
-  <link href="emacspeak_002dsdcv.html" rel="prev" title=
-  "emacspeak-sdcv" />
+  <link href="emacspeak_002dselectrum.html" rel="prev" title=
+  "emacspeak-selectrum" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dsetup.html" accesskey="n" rel=
     "next">emacspeak-setup</a>, Previous: <a href=
-    "emacspeak_002dsdcv.html" accesskey="p" rel=
-    "prev">emacspeak-sdcv</a>, Up: <a href=
+    "emacspeak_002dselectrum.html" accesskey="p" rel=
+    "prev">emacspeak-selectrum</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,14 +65,14 @@
   </div>
   <hr />
   <span id="emacspeak_002dses-1"></span>
-  <h3 class="section">12.162 emacspeak-ses</h3>
+  <h3 class="section">12.163 emacspeak-ses</h3>
   <p>ses implements a simple spread sheet and is part of Emacs This
   module speech-enables ses</p><span id=
   "Emacspeak_002dSes-Commands"></span>
-  <h4 class="subsection">12.162.1 Emacspeak-Ses
+  <h4 class="subsection">12.163.1 Emacspeak-Ses
   Commands</h4><span id=
   "emacspeak_002dses_002dbackward_002dcolumn_002dand_002dsummarize"></span>
-  <h4 class="subsubsection">12.162.1.1
+  <h4 class="subsubsection">12.163.1.1
   emacspeak-ses-backward-column-and-summarize</h4>
   <dl>
     <dt id=
@@ -90,7 +90,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dses_002dbackward_002drow_002dand_002dsummarize"></span>
-  <h4 class="subsubsection">12.162.1.2
+  <h4 class="subsubsection">12.163.1.2
   emacspeak-ses-backward-row-and-summarize</h4>
   <dl>
     <dt id=
@@ -108,7 +108,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dses_002dforward_002dcolumn_002dand_002dsummarize"></span>
-  <h4 class="subsubsection">12.162.1.3
+  <h4 class="subsubsection">12.163.1.3
   emacspeak-ses-forward-column-and-summarize</h4>
   <dl>
     <dt id=
@@ -126,7 +126,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dses_002dforward_002drow_002dand_002dsummarize"></span>
-  <h4 class="subsubsection">12.162.1.4
+  <h4 class="subsubsection">12.163.1.4
   emacspeak-ses-forward-row-and-summarize</h4>
   <dl>
     <dt id=
@@ -143,7 +143,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dses_002dsummarize_002dcell"></span>
-  <h4 class="subsubsection">12.162.1.5
+  <h4 class="subsubsection">12.163.1.5
   emacspeak-ses-summarize-cell</h4>
   <dl>
     <dt id="index-emacspeak_002dses_002dsummarize_002dcell">
@@ -161,7 +161,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dses_002dsummarize_002dcurrent_002dcell"></span>
-  <h4 class="subsubsection">12.162.1.6
+  <h4 class="subsubsection">12.163.1.6
   emacspeak-ses-summarize-current-cell</h4>
   <dl>
     <dt id=
