--- a/manual/emacspeak_002dgoogle.html
+++ b/manual/emacspeak_002dgoogle.html
@@ -841,14 +841,7 @@ Optional interactive prefix arg ‘lang’ specifies  language identifier.
     <strong>emacspeak-google-tts-region</strong> <em>(start end
     &amp;optional ask-lang)</em></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-. g</kbd></dt>
-        <dd><span id="index-C_002d_002e-g"></span></dd>
-        <dt><kbd>C-' g</kbd></dt>
-        <dd><span id="index-C_002d_0027-g"></span></dd>
-        <dt><kbd>C-x @ s g</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-s-g"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dgoogle_002dtts_002dregion-1"></span>
       <div class="format">
         <pre class="format">Speak region using Google Network TTS.
