--- a/manual/emacspeak_002dtabulate.html
+++ b/manual/emacspeak_002dtabulate.html
@@ -67,34 +67,6 @@
   <span id="emacspeak_002dtabulate-1"></span>
   <h3 class="section">12.182 emacspeak-tabulate</h3>
   <p>This module is a simple table recognizer. Can recognize the
-  columns in tabulated output, e.g. ps, ls output</p><span id=
-  "Emacspeak_002dTabulate-Commands"></span>
-  <h4 class="subsection">12.182.1 Emacspeak-Tabulate
-  Commands</h4><span id="emacspeak_002dtabulate_002dregion"></span>
-  <h4 class="subsubsection">12.182.1.1
-  emacspeak-tabulate-region</h4>
-  <dl>
-    <dt id="index-emacspeak_002dtabulate_002dregion">Command:
-    <strong>emacspeak-tabulate-region</strong> <em>(start end
-    &amp;optional mark-fields)</em></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e i</kbd></dt>
-        <dd><span id="index-C_002de-i"></span></dd>
-        <dt><kbd>&lt;fn&gt; i</kbd></dt>
-        <dd><span id="index-_003cfn_003e-i"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dtabulate_002dregion-1"></span>
-      <div class="format">
-        <pre class=
-        "format">Voicifies the white-space of a table if one found.  Optional interactive prefix
-arg mark-fields specifies if the header row information is used to mark fields
-in the white-space.
-
-(fn START END &amp;optional MARK-FIELDS)
-</pre>
-      </div>
-    </dd>
-  </dl>
+  columns in tabulated output, e.g. ps, ls output</p>
 </body>
 </html>
